# androidGPUImage

./: README.md  settings.gradle
app/: build.gradle
gpuimagelib/: CMakeLists.txt  build.gradle
gpuimagelib/src/androidTest/java/com/jqh/gpuimagelib/: ExampleInstrumentedTest.java
gpuimagelib/src/main/: AndroidManifest.xml
gpuimagelib/src/main/cpp/: JqhCallJava.cpp  JqhCallJava.h  JqhQueue.cpp  JqhQueue.h  RtmpPush.cpp  RtmpPush.h  jqhpush.cpp
gpuimagelib/src/main/java/com/jqh/gpuimagelib/audio/: AudioRecordUtil.java
gpuimagelib/src/main/java/com/jqh/gpuimagelib/camera/: GPUCamera.java  GPUCameraFboRender.java  GPUCameraFboRender1.java  GPUCameraRender.java  GPUCameraRender1.java  GPUCameraView.java  GPUCameraView1.java  MediaGPUImageFilter.java
gpuimagelib/src/main/java/com/jqh/gpuimagelib/encodec/: JqhBaseMediaEncoder.java  JqhEncodecRender.java  JqhEncodecRender1.java  JqhMediaEncodec.java
gpuimagelib/src/main/java/com/jqh/gpuimagelib/filter/: BaseGPUImageFilter.java  GPUImageGreyFilter.java  GPUImageHueBlendFilter.java  GPUImageImgFliter.java  GPUImageLightFilter.java  GPUImageOpacityFilter.java  GPUImageTextFilter.java  GPUImageZoomBlurFilter.java
gpuimagelib/src/main/java/com/jqh/gpuimagelib/image/: GPUImageRender.java  GPUImageRender2.java  GPUImageView.java
gpuimagelib/src/main/res/raw/: fragement_opacity_shader.glsl  fragement_opacity_shader_camera.glsl  fragment_shader3.glsl  vertex_shader.glsl  vertex_shader_camera.glsl
gpuimagelib/src/main/res/values/: strings.xml
gpuimagelib/src/test/java/com/jqh/gpuimagelib/: ExampleUnitTest.java
(+88 files in other folders)
